--- a/index.htm
+++ b/index.htm
@@ -16,7 +16,7 @@
           Hello, this is Mila! Today we will practice a noun with an adjective in Norwegian.
         </li>
         <li class="chat-btn">
-          <button class="button" id ="starter" type="button">Cool, this is exactly what I need.</button>
+          <button class="button left"  id ="starter" type="button">Cool, this is exactly what I need.</button>
         </li>
       </ul>
     </div>
